feat: added department page

--- a/src/locales/lang/en_US/sys.json
+++ b/src/locales/lang/en_US/sys.json
@@ -98,7 +98,8 @@
         "permission": "Permission",
         "role": "Role",
         "user": "User",
-        "user_detail": "User Detail"
+        "user_detail": "User Detail",
+        "department": "Department"
       },
       "blog": "Blog",
       "components": "Components",
