--- a/src/locales/lang/zh_CN/sys.json
+++ b/src/locales/lang/zh_CN/sys.json
@@ -97,7 +97,8 @@
         "permission": "权限",
         "role": "角色",
         "user": "用户",
-        "user_detail": "用户详情"
+        "user_detail": "用户详情",
+        "department": "部门管理"
       },
       "blog": "博客",
       "components": "组件",
