--- a/src/locales/lang/zh_CN/sys.json
+++ b/src/locales/lang/zh_CN/sys.json
@@ -98,7 +98,10 @@
         "role": "角色",
         "user": "用户",
         "user_detail": "用户详情",
-        "department": "部门管理"
+        "department": "部门",
+        "post": "岗位",
+        "dict": "字典",
+        "config": "参数"
       },
       "blog": "博客",
       "components": "组件",
